Assignment 2/assignment2/src/main/bkit/parser/.antlr/BKITParser.py
# Generated from e:\HOÚC KIÃ 192\NGUY N LYÏ NG‘N NG›ﬁ L¬ÚP TRIÃNH\Assignment 2\assignment2\src\main\bkit\parser\BKIT.g4 by ANTLR 4.7.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class BKITParser ( Parser ):

    grammarFileName = "BKIT.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'main'", "<INVALID>", "'Body'", "'Break'", 
                     "'Continue'", "'Do'", "'Else'", "'ElseIf'", "'EndBody'", 
                     "'EndIf'", "'EndFor'", "'EndWhile'", "'For'", "'Function'", 
                     "'If'", "'Parameter'", "'Return'", "'Then'", "'Var'", 
                     "'While'", "'True'", "'False'", "'+'", "'+.'", "'-'", 
                     "'-.'", "'*'", "'*.'", "'\\'", "'/'", "'%'", "'!'", 
                     "'&&'", "'||'", "'='", "'=='", "'!='", "'<'", "'<.'", 
                     "'>'", "'>.'", "'<='", "'<=.'", "'>='", "'>=.'", "'=/='", 
                     "'('", "')'", "'['", "']'", "':'", "'.'", "','", "';'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "BLOCKCOMMENT", "BODY", 
                      "BREAK", "CONTINUE", "DO", "ELSE", "ELSEIF", "ENDBODY", 
                      "ENDIF", "ENDFOR", "ENDWHILE", "FOR", "FUNCTION", 
                      "IF", "PARAMETER", "RETURN", "THEN", "VAR", "WHILE", 
                      "TRUE", "FALSE", "INT_ADD", "FLOAT_ADD", "INT_SUB", 
                      "FLOAT_SUB", "INT_MUL", "FLOAT_MUL", "INT_DIV", "FLOAT_DIV", 
                      "INT_MOD", "NOT", "AND", "OR", "EQUAL_ASSIGN", "INT_EQUAL", 
                      "INT_NOT_EQUAL", "INT_LESS_THAN", "FLOAT_LESS_THAN", 
                      "INT_MORE_THAN", "FLOAT_MORE_THAN", "INT_LESS_OR_EQUAL", 
                      "FLOAT_LESS_OR_EQUAL", "INT_MORE_OR_EQUAL", "FLOAT_MORE_OR_EQUAL", 
                      "FLOAT_NOT_EQUAL", "LB", "RB", "LSB", "RSB", "COLON", 
                      "DOT", "COMMA", "SEMI", "WS", "ID", "INTLIT", "FLOATLIT", 
                      "BOOLEANLIT", "STRINGLIT", "ERROR_CHAR", "UNCLOSE_STRING", 
                      "ILLEGAL_ESCAPE" ]

    RULE_program = 0
    RULE_globalVardecl = 1
    RULE_varDecl = 2
    RULE_varList = 3
    RULE_var = 4
    RULE_initialValue = 5
    RULE_arrayVar = 6
    RULE_multiDimension = 7
    RULE_dimension = 8
    RULE_basicVar = 9
    RULE_globalFuncdecl = 10
    RULE_funcDecl = 11
    RULE_mainFuncDecl = 12
    RULE_nonMainFuncDecl = 13
    RULE_funcName = 14
    RULE_statementList = 15
    RULE_statement = 16
    RULE_assignStmt = 17
    RULE_variable = 18
    RULE_ifStmt = 19
    RULE_forStmt = 20
    RULE_whileStmt = 21
    RULE_dowhileStmt = 22
    RULE_breakStmt = 23
    RULE_continueStmt = 24
    RULE_callStmt = 25
    RULE_returnStmt = 26
    RULE_expression = 27
    RULE_expression1 = 28
    RULE_expression2 = 29
    RULE_expression3 = 30
    RULE_expression4 = 31
    RULE_expression5 = 32
    RULE_expression6 = 33
    RULE_booleanLit = 34
    RULE_funccallExpression = 35
    RULE_argumentList = 36
    RULE_manyArgument = 37
    RULE_indexExpression = 38
    RULE_indexOperator = 39

    ruleNames =  [ "program", "globalVardecl", "varDecl", "varList", "var", 
                   "initialValue", "arrayVar", "multiDimension", "dimension", 
                   "basicVar", "globalFuncdecl", "funcDecl", "mainFuncDecl", 
                   "nonMainFuncDecl", "funcName", "statementList", "statement", 
                   "assignStmt", "variable", "ifStmt", "forStmt", "whileStmt", 
                   "dowhileStmt", "breakStmt", "continueStmt", "callStmt", 
                   "returnStmt", "expression", "expression1", "expression2", 
                   "expression3", "expression4", "expression5", "expression6", 
                   "booleanLit", "funccallExpression", "argumentList", "manyArgument", 
                   "indexExpression", "indexOperator" ]

    EOF = Token.EOF
    T__0=1
    BLOCKCOMMENT=2
    BODY=3
    BREAK=4
    CONTINUE=5
    DO=6
    ELSE=7
    ELSEIF=8
    ENDBODY=9
    ENDIF=10
    ENDFOR=11
    ENDWHILE=12
    FOR=13
    FUNCTION=14
    IF=15
    PARAMETER=16
    RETURN=17
    THEN=18
    VAR=19
    WHILE=20
    TRUE=21
    FALSE=22
    INT_ADD=23
    FLOAT_ADD=24
    INT_SUB=25
    FLOAT_SUB=26
    INT_MUL=27
    FLOAT_MUL=28
    INT_DIV=29
    FLOAT_DIV=30
    INT_MOD=31
    NOT=32
    AND=33
    OR=34
    EQUAL_ASSIGN=35
    INT_EQUAL=36
    INT_NOT_EQUAL=37
    INT_LESS_THAN=38
    FLOAT_LESS_THAN=39
    INT_MORE_THAN=40
    FLOAT_MORE_THAN=41
    INT_LESS_OR_EQUAL=42
    FLOAT_LESS_OR_EQUAL=43
    INT_MORE_OR_EQUAL=44
    FLOAT_MORE_OR_EQUAL=45
    FLOAT_NOT_EQUAL=46
    LB=47
    RB=48
    LSB=49
    RSB=50
    COLON=51
    DOT=52
    COMMA=53
    SEMI=54
    WS=55
    ID=56
    INTLIT=57
    FLOATLIT=58
    BOOLEANLIT=59
    STRINGLIT=60
    ERROR_CHAR=61
    UNCLOSE_STRING=62
    ILLEGAL_ESCAPE=63

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def globalVardecl(self):
            return self.getTypedRuleContext(BKITParser.GlobalVardeclContext,0)


        def globalFuncdecl(self):
            return self.getTypedRuleContext(BKITParser.GlobalFuncdeclContext,0)


        def EOF(self):
            return self.getToken(BKITParser.EOF, 0)

        def getRuleIndex(self):
            return BKITParser.RULE_program




    def program(self):

        localctx = BKITParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 80
            self.globalVardecl()
            self.state = 81
            self.globalFuncdecl()
            self.state = 82
            self.match(BKITParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class GlobalVardeclContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def varDecl(self):
            return self.getTypedRuleContext(BKITParser.VarDeclContext,0)


        def globalVardecl(self):
            return self.getTypedRuleContext(BKITParser.GlobalVardeclContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_globalVardecl




    def globalVardecl(self):

        localctx = BKITParser.GlobalVardeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_globalVardecl)
        try:
            self.state = 89
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 84
                self.varDecl()
                self.state = 85
                self.globalVardecl()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 87
                self.varDecl()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)

                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class VarDeclContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR(self):
            return self.getToken(BKITParser.VAR, 0)

        def COLON(self):
            return self.getToken(BKITParser.COLON, 0)

        def varList(self):
            return self.getTypedRuleContext(BKITParser.VarListContext,0)


        def SEMI(self):
            return self.getToken(BKITParser.SEMI, 0)

        def getRuleIndex(self):
            return BKITParser.RULE_varDecl




    def varDecl(self):

        localctx = BKITParser.VarDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_varDecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 91
            self.match(BKITParser.VAR)
            self.state = 92
            self.match(BKITParser.COLON)
            self.state = 93
            self.varList()
            self.state = 94
            self.match(BKITParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class VarListContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var(self):
            return self.getTypedRuleContext(BKITParser.VarContext,0)


        def COMMA(self):
            return self.getToken(BKITParser.COMMA, 0)

        def varList(self):
            return self.getTypedRuleContext(BKITParser.VarListContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_varList




    def varList(self):

        localctx = BKITParser.VarListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_varList)
        try:
            self.state = 101
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 96
                self.var()
                self.state = 97
                self.match(BKITParser.COMMA)
                self.state = 98
                self.varList()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 100
                self.var()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class VarContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def basicVar(self):
            return self.getTypedRuleContext(BKITParser.BasicVarContext,0)


        def arrayVar(self):
            return self.getTypedRuleContext(BKITParser.ArrayVarContext,0)


        def EQUAL_ASSIGN(self):
            return self.getToken(BKITParser.EQUAL_ASSIGN, 0)

        def initialValue(self):
            return self.getTypedRuleContext(BKITParser.InitialValueContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_var




    def var(self):

        localctx = BKITParser.VarContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_var)
        try:
            self.state = 114
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 105
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
                if la_ == 1:
                    self.state = 103
                    self.basicVar()
                    pass

                elif la_ == 2:
                    self.state = 104
                    self.arrayVar()
                    pass


                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 109
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
                if la_ == 1:
                    self.state = 107
                    self.basicVar()
                    pass

                elif la_ == 2:
                    self.state = 108
                    self.arrayVar()
                    pass


                self.state = 111
                self.match(BKITParser.EQUAL_ASSIGN)
                self.state = 112
                self.initialValue()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class InitialValueContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INTLIT(self):
            return self.getToken(BKITParser.INTLIT, 0)

        def FLOATLIT(self):
            return self.getToken(BKITParser.FLOATLIT, 0)

        def STRINGLIT(self):
            return self.getToken(BKITParser.STRINGLIT, 0)

        def booleanLit(self):
            return self.getTypedRuleContext(BKITParser.BooleanLitContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_initialValue




    def initialValue(self):

        localctx = BKITParser.InitialValueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_initialValue)
        try:
            self.state = 120
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [BKITParser.INTLIT]:
                self.enterOuterAlt(localctx, 1)
                self.state = 116
                self.match(BKITParser.INTLIT)
                pass
            elif token in [BKITParser.FLOATLIT]:
                self.enterOuterAlt(localctx, 2)
                self.state = 117
                self.match(BKITParser.FLOATLIT)
                pass
            elif token in [BKITParser.STRINGLIT]:
                self.enterOuterAlt(localctx, 3)
                self.state = 118
                self.match(BKITParser.STRINGLIT)
                pass
            elif token in [BKITParser.TRUE, BKITParser.FALSE]:
                self.enterOuterAlt(localctx, 4)
                self.state = 119
                self.booleanLit()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ArrayVarContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(BKITParser.ID, 0)

        def multiDimension(self):
            return self.getTypedRuleContext(BKITParser.MultiDimensionContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_arrayVar




    def arrayVar(self):

        localctx = BKITParser.ArrayVarContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_arrayVar)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 122
            self.match(BKITParser.ID)
            self.state = 123
            self.multiDimension()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class MultiDimensionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def dimension(self):
            return self.getTypedRuleContext(BKITParser.DimensionContext,0)


        def multiDimension(self):
            return self.getTypedRuleContext(BKITParser.MultiDimensionContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_multiDimension




    def multiDimension(self):

        localctx = BKITParser.MultiDimensionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_multiDimension)
        try:
            self.state = 129
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 125
                self.dimension()
                self.state = 126
                self.multiDimension()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 128
                self.dimension()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class DimensionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LSB(self):
            return self.getToken(BKITParser.LSB, 0)

        def INTLIT(self):
            return self.getToken(BKITParser.INTLIT, 0)

        def RSB(self):
            return self.getToken(BKITParser.RSB, 0)

        def getRuleIndex(self):
            return BKITParser.RULE_dimension




    def dimension(self):

        localctx = BKITParser.DimensionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_dimension)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 131
            self.match(BKITParser.LSB)
            self.state = 132
            self.match(BKITParser.INTLIT)
            self.state = 133
            self.match(BKITParser.RSB)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class BasicVarContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(BKITParser.ID, 0)

        def getRuleIndex(self):
            return BKITParser.RULE_basicVar




    def basicVar(self):

        localctx = BKITParser.BasicVarContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_basicVar)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 135
            self.match(BKITParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class GlobalFuncdeclContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def funcDecl(self):
            return self.getTypedRuleContext(BKITParser.FuncDeclContext,0)


        def globalFuncdecl(self):
            return self.getTypedRuleContext(BKITParser.GlobalFuncdeclContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_globalFuncdecl




    def globalFuncdecl(self):

        localctx = BKITParser.GlobalFuncdeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_globalFuncdecl)
        try:
            self.state = 142
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 137
                self.funcDecl()
                self.state = 138
                self.globalFuncdecl()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 140
                self.funcDecl()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)

                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class FuncDeclContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def mainFuncDecl(self):
            return self.getTypedRuleContext(BKITParser.MainFuncDeclContext,0)


        def nonMainFuncDecl(self):
            return self.getTypedRuleContext(BKITParser.NonMainFuncDeclContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_funcDecl




    def funcDecl(self):

        localctx = BKITParser.FuncDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_funcDecl)
        try:
            self.state = 146
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 144
                self.mainFuncDecl()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 145
                self.nonMainFuncDecl()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class MainFuncDeclContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUNCTION(self):
            return self.getToken(BKITParser.FUNCTION, 0)

        def COLON(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.COLON)
            else:
                return self.getToken(BKITParser.COLON, i)

        def BODY(self):
            return self.getToken(BKITParser.BODY, 0)

        def globalVardecl(self):
            return self.getTypedRuleContext(BKITParser.GlobalVardeclContext,0)


        def statementList(self):
            return self.getTypedRuleContext(BKITParser.StatementListContext,0)


        def ENDBODY(self):
            return self.getToken(BKITParser.ENDBODY, 0)

        def DOT(self):
            return self.getToken(BKITParser.DOT, 0)

        def PARAMETER(self):
            return self.getToken(BKITParser.PARAMETER, 0)

        def varList(self):
            return self.getTypedRuleContext(BKITParser.VarListContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_mainFuncDecl




    def mainFuncDecl(self):

        localctx = BKITParser.MainFuncDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_mainFuncDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 148
            self.match(BKITParser.FUNCTION)
            self.state = 149
            self.match(BKITParser.COLON)
            self.state = 150
            self.match(BKITParser.T__0)
            self.state = 154
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==BKITParser.PARAMETER:
                self.state = 151
                self.match(BKITParser.PARAMETER)
                self.state = 152
                self.match(BKITParser.COLON)
                self.state = 153
                self.varList()


            self.state = 156
            self.match(BKITParser.BODY)
            self.state = 157
            self.match(BKITParser.COLON)
            self.state = 158
            self.globalVardecl()
            self.state = 159
            self.statementList()
            self.state = 160
            self.match(BKITParser.ENDBODY)
            self.state = 161
            self.match(BKITParser.DOT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class NonMainFuncDeclContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUNCTION(self):
            return self.getToken(BKITParser.FUNCTION, 0)

        def COLON(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.COLON)
            else:
                return self.getToken(BKITParser.COLON, i)

        def funcName(self):
            return self.getTypedRuleContext(BKITParser.FuncNameContext,0)


        def BODY(self):
            return self.getToken(BKITParser.BODY, 0)

        def globalVardecl(self):
            return self.getTypedRuleContext(BKITParser.GlobalVardeclContext,0)


        def statementList(self):
            return self.getTypedRuleContext(BKITParser.StatementListContext,0)


        def ENDBODY(self):
            return self.getToken(BKITParser.ENDBODY, 0)

        def DOT(self):
            return self.getToken(BKITParser.DOT, 0)

        def PARAMETER(self):
            return self.getToken(BKITParser.PARAMETER, 0)

        def varList(self):
            return self.getTypedRuleContext(BKITParser.VarListContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_nonMainFuncDecl




    def nonMainFuncDecl(self):

        localctx = BKITParser.NonMainFuncDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_nonMainFuncDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 163
            self.match(BKITParser.FUNCTION)
            self.state = 164
            self.match(BKITParser.COLON)
            self.state = 165
            self.funcName()
            self.state = 169
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==BKITParser.PARAMETER:
                self.state = 166
                self.match(BKITParser.PARAMETER)
                self.state = 167
                self.match(BKITParser.COLON)
                self.state = 168
                self.varList()


            self.state = 171
            self.match(BKITParser.BODY)
            self.state = 172
            self.match(BKITParser.COLON)
            self.state = 173
            self.globalVardecl()
            self.state = 174
            self.statementList()
            self.state = 175
            self.match(BKITParser.ENDBODY)
            self.state = 176
            self.match(BKITParser.DOT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class FuncNameContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(BKITParser.ID, 0)

        def getRuleIndex(self):
            return BKITParser.RULE_funcName




    def funcName(self):
